# opencv-rust

./: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  .travis.yml  CHANGES.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  bug-test.sh  build.rs  build_cmake_probe.rs  build_generator.rs  common.h  gen_rust.py  hdr_parser.py  release.toml  rustfmt.toml
binding-generator/: Cargo.toml  README.md  release.toml
binding-generator-bench/: Cargo.toml
binding-generator-bench/benches/: benchit.rs
binding-generator/benches/: benchit.rs
binding-generator/src/: abstract_ref_wrapper.rs  class.rs  comment.rs  constant.rs  debug.rs  element.rs  entity.rs  enumeration.rs  field.rs  func.rs  function.rs  generator.rs  generator_env.rs  iterator_ext.rs  lib.rs  map_borrowed.rs  memoize.rs  name_pool.rs  renderer.rs  return_type_wrapper.rs  settings.rs  smart_ptr.rs  string_ext.rs  supported_module.rs  test.rs  tuple.rs  type_ref.rs  typedef.rs  vector.rs  version.rs  walker.rs
binding-generator/src/class/: desc.rs
binding-generator/src/constant/: desc.rs
binding-generator/src/func/: desc.rs  func_id.rs  func_matcher.rs  kind.rs  slice_arg_finder.rs
binding-generator/src/settings/: argument_names.rs  argument_override.rs  class_tweaks.rs  const_tweak.rs  element_exclude_kind.rs  element_export_tweak.rs  enum_bitfield_override.rs  force_infallible.rs  func_cfg_attr.rs  func_companion_tweak.rs  func_exclude.rs  func_inject.rs  func_rename.rs  func_replace.rs  func_specialize.rs  func_unsafe.rs  generator_module_tweaks.rs  implemented.rs  property_rename.rs  property_tweaks.rs
binding-generator/src/smart_ptr/: desc.rs
binding-generator/src/type_ref/: desc.rs  kind.rs  renderer.rs  style.rs  test.rs  types.rs
binding-generator/src/typedef/: desc.rs
binding-generator/src/vector/: desc.rs
binding-generator/src/writer/: mod.rs  rust.rs
binding-generator/src/writer/rust_native/: abstract_ref_wrapper.rs  class.rs  comment.rs  constant.rs  element.rs  enumeration.rs  field.rs  func.rs  func_desc.rs  function.rs  mod.rs  renderer.rs  return_type_wrapper.rs  smart_ptr.rs  string_ext.rs  tuple.rs  type_ref.rs  typedef.rs  vector.rs
binding-generator/src/writer/rust_native/class/: gen.rs  generate.rs
binding-generator/src/writer/rust_native/tpl/abstract_ref_wrapper/: rust.tpl.rs
binding-generator/src/writer/rust_native/tpl/class/: base.tpl.rs  base_cast.tpl.cpp  base_cast.tpl.rs  boxed.tpl.cpp  boxed.tpl.rs  boxed_dtor.tpl.cpp  default_ctor.tpl.rs  descendant_cast.tpl.cpp  descendant_cast.tpl.rs  impl.tpl.rs  impl_clone.tpl.rs  impl_debug.rs  impl_default.tpl.rs  impl_explicit_clone.tpl.rs  impl_implicit_clone.tpl.rs  simple.tpl.rs  simple_base.tpl.rs  simple_field.tpl.rs  trait.tpl.rs  trait_dyn.tpl.rs
binding-generator/src/writer/rust_native/tpl/const/: float.tpl.rs  int.tpl.rs  rust.tpl.rs  string.tpl.rs
binding-generator/src/writer/rust_native/tpl/enum/: const.tpl.rs  const_bitfield.tpl.rs  const_ignored.tpl.rs  enum.tpl.rs  enum_bitfield.tpl.rs  from_const.tpl.rs  from_const_ignored.tpl.rs
binding-generator/src/writer/rust_native/tpl/func/: cpp.tpl.cpp  cpp_infallible.tpl.cpp  rust.tpl.rs  rust_extern.tpl.rs
binding-generator/src/writer/rust_native/tpl/module/: cpp_hdr.tpl.cpp  externs.tpl.rs  prelude.tpl.rs  rust.tpl.rs  rust_hdr.tpl
binding-generator/src/writer/rust_native/tpl/smart_ptr/: base_cast.tpl.cpp  base_cast.tpl.rs  cpp.tpl.cpp  ctor.tpl.cpp  ctor.tpl.rs  impl_debug.rs  rust.tpl.rs  trait_cast.tpl.rs  trait_raw.tpl.rs
binding-generator/src/writer/rust_native/tpl/tuple/: cpp.tpl.cpp  rust.tpl.rs
binding-generator/src/writer/rust_native/tpl/vector/: cpp.tpl.cpp  cpp_input_output_array.tpl.cpp  cpp_methods_copy_non_bool.tpl.cpp  rust.tpl.rs  rust_boxed_ref.tpl.rs  rust_copy_non_bool.tpl.rs  rust_extern.tpl.rs  rust_input_array.tpl.rs  rust_input_output_array.tpl.rs  rust_non_copy_or_bool.tpl.rs  rust_output_array.tpl.rs  rust_type_alias.tpl.rs
binding-generator/src/writer/rust_native/type_ref/: kind.rs  lifetime.rs  nullability.rs  render_lane.rs
binding-generator/src/writer/rust_native/type_ref/render_lane/: array.rs  by_move.rs  cpp_pass_by_void_ptr.rs  enumeration.rs  function.rs  indirect.rs  input_output_array.rs  primitive.rs  simple_class.rs  string.rs  trait_class.rs  (+1 more)
binding-generator/tests/: code_template.cpp  generation.rs
binding-generator/tpl/class/: base.tpl.rs  boxed.tpl.rs  impl.tpl.rs  simple.tpl.rs  trait.tpl.rs  trait_dyn.tpl.rs
binding-generator/tpl/const/: uint.tpl.rs  usize.tpl.rs
binding-generator/tpl/enum/: const_ignored.tpl.ru.rs  enum.tpl.rs
binding-generator/tpl/ephemeral/: ephemeral.tpl.hpp
binding-generator/tpl/func/: cpp.tpl.cpp  rust.tpl.rs  rust_extern.tpl.rs  rust_mat_at_mut.rs  rust_no_fail.tpl.rs  rust_ret_map_by_ptr.tpl.rs  rust_ret_map_raw_ptr.tpl.rs  rust_ret_map_string.tpl.rs
binding-generator/tpl/module/: cpp.tpl.cpp  prelude.tpl.rs  rust.tpl.rs
binding-generator/tpl/return_type_wrapper/: cpp.tpl.cpp
binding-generator/tpl/settings/: rust_mat_at_const.rs  rust_mat_at_const.tpl.rs  rust_mat_at_mut.tpl.rs
binding-generator/tpl/smart_ptr/: cpp.tpl.cpp  cpp_boxed.tpl.cpp  methods_non_trait.tpl.rs  rust.tpl.rs  trait_cast.tpl.rs
binding-generator/tpl/typedef/: tpl.rs
binding-generator/tpl/vector/: cpp_common.tpl.cpp  cpp_input_output_aray.tpl.cpp  cpp_input_output_array.tpl.cpp  cpp_methods_boxed.tpl.cpp  cpp_methods_copy_non_bool.tpl.cpp  cpp_methods_non_boxed.tpl.cpp  cpp_methods_non_boxed_common.tpl.cpp  cpp_methods_simple.tpl.cpp  cpp_methods_string.tpl.cpp  rust.tpl.rs  rust_common.tpl.rs  rust_copy_non_bool.tpl.rs  rust_inherent_copy_non_bool.tpl.rs  rust_input_output_array.tpl.rs  rust_methods_boxed.tpl.rs  rust_methods_copy_non_bool.tpl.rs  rust_methods_non_boxed.tpl.rs  rust_methods_non_boxed_common.tpl.rs  rust_methods_simple.tpl.rs  rust_methods_string.tpl.rs  rust_non_copy_or_bool.tpl.rs
ci/test-proj/: Cargo.toml
ci/test-proj-clang-runtime/: Cargo.toml
ci/test-proj-clang-runtime/src/: main.rs
cmake/: CMakeLists.txt
(+1079 files in other folders)
