[package]
name = "opencv-binding-generator-bench"
description = "Bencher for opencv binding generator"
repository = "https://github.com/twistedfall/opencv-rust"
version = "0.1.0"
license = "MIT"
authors = ["Pro <twisted.fall@gmail.com>"]
edition = "2021"

[dependencies]
criterion = "0.5"
opencv-binding-generator = { path = "../binding-generator" }

[[bench]]
name = "benchit"
harness = false
