[package]
name = "opencv-binding-generator"
description = "Binding generator for opencv crate"
repository = "https://github.com/twistedfall/opencv-rust"
version = "0.79.0"
license = "MIT"
authors = ["Pro <twisted.fall@gmail.com>"]
edition = "2021"
rust-version = "1.65"
exclude = ["release.toml"]

[lib]

[dependencies]
clang = { version = "2", features = ["clang_6_0"] }
clang-sys = { version = "1", features = ["clang_6_0"] }
dunce = "1"
once_cell = "1" # replace with std::sync::OnceLock when MSRV is 1.70
percent-encoding = { version = "2", default-features = false }
regex = "1"

[features]
clang-runtime = ["clang/runtime", "clang-sys/runtime"]
