[package]
name = "opencv-binding-generator"
description = "Binding generator for opencv crate"
repository = "https://github.com/twistedfall/opencv-rust"
readme = "README.md"
version = "0.100.0"
license = "MIT"
authors = ["Pro <twisted.fall@gmail.com>"]
edition = "2021"
rust-version = "1.82.0"
exclude = ["release.toml"]

[lib]

[dependencies]
clang = { version = "2", features = ["clang_9_0"] }
clang-sys = { version = "1", features = ["clang_9_0"] }
dunce = "1"
percent-encoding = { version = "2", default-features = false }
regex = "1"
shlex = { version = "1.3", default-features = false }

[dev-dependencies]
tempfile = { version = "3", default-features = false }
criterion = "0.8"

[features]
clang-runtime = ["clang/runtime", "clang-sys/runtime"]

[[bench]]
name = "benchit"
harness = false
